Bug 49965 - X Freezes with CPU at 100% when scrolling with VertScrollDelta=0
Summary: X Freezes with CPU at 100% when scrolling with VertScrollDelta=0
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/synaptics (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-15 12:45 UTC by Chun Yang
Modified: 2012-05-17 16:15 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Chun Yang 2012-05-15 12:45:31 UTC
Overview:
Trying to scroll after setting VertScrollDelta to 0 (e.g., with `synclient VertScrollDelta=0`) causes X server to freeze when scrolling.

Steps to Reproduce:
1) Start X and set VertScrollDelta to 0 using `synclient VertScrollDelta=0`
2) Try to scroll using the trackpad.

Actual Results:
X stops responding and CPU usage spikes to 100%

Expected Results:
Vertical scrolling is disabled, as stated in man page: "To disable vertical or horizontal scrolling, set VertScrollDelta or HorizScrollDelta to zero."

Build Operating System: Linux 3.3.2-1-ARCH x86_64
Build Date: 15 April 2012  09:55:35AM

Additional Information:
Setting HorizScrollDelta to 0 does not seem to cause the same freeze.

This is my first bug report. Please let me know how I can provide more information.
Comment 1 Peter Hutterer 2012-05-16 20:26:44 UTC
http://patchwork.freedesktop.org/patch/10358/
Comment 2 Peter Hutterer 2012-05-17 16:15:15 UTC
commit 6d47d334d8a876e7e094306c313246b87016b78a
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Thu May 17 12:10:04 2012 +1000

    Don't allow for scroll distances of 0 (#49965)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.